load("@build_bazel_rules_typescript//:defs.bzl", "ts_library")
load("@build_bazel_rules_nodejs//:defs.bzl", "npm_package", "nodejs_binary")

package(default_visibility=["//visibility:public"])

exports_files(["src/bin/m"])

filegroup(
    name = "node_modules",
    # NB: rxjs is not in this list, because we build it from sources using the
    # label @rxjs//:rxjs
    srcs = glob(["/".join([
        "node_modules",
        pkg,
        "**",
        ext,
    ]) for pkg in [
        "@types",
        "tsickle",
        "tslib",
        "tsutils",
        "typescript",
    ] for ext in [
        "*.js",
        "*.json",
        "*.d.ts",
    ]]),
)

ts_library(
    name = "lib",
    srcs = glob(
      ["src/**/*.ts"],
      exclude = ["**/*.spec.ts", "*.suite.ts"]
    ),
    module_name = "@example/issue_183",
    tsconfig = "//:tsconfig.json"
)

npm_package(
    name = "package",
    srcs = [
        "src/bin/m",
    ],
    deps = [
        ":lib",
    ],
)

nodejs_binary(
    name = "cli",
    data = [
      ":package",
    ],
    entry_point = "issue_183/package/src/bin/m",
)